add: Add the video
