# swagger/swagger.yml
@@ -54,6 +54,44 @@ paths:
             $ref: '#/definitions/models.User'
         "403":
           description: :dont have this user
+  /message/addImageMessage:
+    post:
+      tags:
+      - message
+      description: get the Message by messageId
+      operationId: MessageController.CreateImageMessage 添加带图片消息
+      parameters:
+      - in: path
+        name: Id
+        description: for message planeId
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          schema:
+            $ref: '#/definitions/models.User'
+        "403":
+          description: :dont have this user
+  /message/createMessage:
+    post:
+      tags:
+      - message
+      description: Add the Message
+      operationId: MessageController.CreateMessage
+      parameters:
+      - in: body
+        name: json
+        description: body for user content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Message'
+      responses:
+        "200":
+          schema:
+            $ref: '#/definitions/models.User'
+        "403":
+          description: :dont have this user
   /message/getUserMessage:
     post:
       tags:
@@ -194,7 +232,7 @@ paths:
         "403":
           description: body is empty
   /user/delete:
-    put:
+    post:
       tags:
       - user
       description: Delete the user
@@ -231,7 +269,31 @@ paths:
               $ref: '#/definitions/models.User'
         "500":
           description: 系统错误
-  /user/image:
+  /user/update:
+    post:
+      tags:
+      - user
+      description: update the user
+      operationId: UserController.Update
+      parameters:
+      - in: path
+        name: uid
+        description: The uid you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for user content
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      responses:
+        "200":
+          schema:
+            $ref: '#/definitions/models.User'
+        "403":
+          description: :dont have this user
+  /user/updateImage:
     post:
       tags:
       - user
@@ -254,24 +316,19 @@ paths:
             $ref: '#/definitions/models.User'
         "403":
           description: :dont have this user
-  /user/update:
+  /video/addVideo:
     post:
       tags:
-      - user
-      description: update the user
-      operationId: UserController.Update
+      - video
+      description: get the Message by messageId
+      operationId: VideoController.UploadVideo 添加带图片消息
       parameters:
       - in: path
-        name: uid
-        description: The uid you want to update
+        name: Id
+        description: for message planeId
         required: true
-        type: string
-      - in: body
-        name: body
-        description: body for user content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
+        type: integer
+        format: int64
       responses:
         "200":
           schema:
@@ -303,6 +360,42 @@ definitions:
         format: int64
       UserName:
         type: string
+  models.Message:
+    title: Message
+    type: object
+    properties:
+      Address:
+        type: string
+      Context:
+        type: string
+      Don:
+        type: number
+        format: double
+      FromUserId:
+        type: integer
+        format: int64
+      Id:
+        type: integer
+        format: int64
+      ImageUrl:
+        type: string
+      IsRead:
+        type: boolean
+      Log:
+        type: number
+        format: double
+      PlaneId:
+        type: integer
+        format: int64
+      ReadTime:
+        type: string
+        format: string
+      SendTime:
+        type: string
+        format: string
+      ToUserId:
+        type: integer
+        format: int64
   models.Plane:
     title: Plane
     type: object
@@ -312,6 +405,9 @@ definitions:
       BeginTime:
         type: string
         format: string
+      Distance:
+        type: number
+        format: double
       Email:
         type: string
       Id:
@@ -323,6 +419,9 @@ definitions:
         type: boolean
       PlaneName:
         type: string
+      PlaneSpeed:
+        type: number
+        format: double
       PlayTime:
         type: string
         format: string
@@ -376,3 +475,6 @@ tags:
 - name: message
   description: |
     Operations about logs
+- name: video
+  description: |
+    VideoController 视屏控制器
